D8-1558 Fix spacing between page titles and breadcrumbs.

--- a/css/theme.css
+++ b/css/theme.css
@@ -590,6 +590,7 @@ body,
   margin-bottom: 2rem;
 }
 .isu-page-title {
+  margin-top: 1rem;
   margin-bottom: 2rem;
 }
 
@@ -787,7 +788,7 @@ article:not(.isu-user):not(.isu-search_collapse) {
 /* --- ## Breadcrumbs --- */
 
 .isu-breadcrumb {
-  margin-bottom: 1rem;
+  margin-bottom: 0;
   background: transparent;
 }
 
